--- a/client/player/container.html
+++ b/client/player/container.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -20,4 +20,4 @@
       Your browser does not support video
     </video>
   </body>
-</html> -->
+</html>
