--- a/client/player/page.html
+++ b/client/player/page.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -38,4 +38,4 @@
       >documented rules</a
     >.
   </body>
-</html> -->
+</html>
