feat: Mint Supra add

--- a/client/player/page.html
+++ b/client/player/page.html
@@ -13,7 +13,7 @@
     <meta name="twitter:image" content="https://yoursite.com/example.png" />
     <meta
       name="twitter:player"
-      content="https://575c-14-195-142-82.ngrok-free.app/"
+      content="https://37ab-14-195-142-82.ngrok-free.app/"
     />
     <meta name="twitter:player:width" content="480" />
     <meta name="twitter:player:height" content="480" />
